[package]
name = "threatsentry-ultra"
version = "0.1.0"
edition = "2021"
authors = ["Rahees Ahmed <raheesahmed256@gmail.com>"]
description = "Hardware-Powered Cyber Threat Intelligence"

[dependencies]
# Email monitoring
imap = { version = "3.0.0-alpha.15" }
native-tls = "0.2"
regex = "1.9"

# HTTP and JSON handling
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Microphone monitoring
cpal = "0.15"
spectrum-analyzer = "1.4"

# Thermal monitoring
windows = { version = "0.48", features = ["Win32_System_Power", "Win32_System_Diagnostics", "Win32_Foundation"] }
rand = "0.8"

# Notifications and CLI
notify-rust = "4.8"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"

# GUI
eframe = { version = "0.24.0", features = ["persistence"] }
egui_plot = "0.24.0"
winapi = { version = "0.3", features = ["winuser", "windef"] }
